[build-system]
requires = ["setuptools>=64", ]
build-backend = "setuptools.build_meta"

[project]
name = "crc-bank"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{ name = "Pitt Center for Research Computing" }]
readme = { file = "README.md", content-type = "text/markdown" }
description = "Banking application for resource allocation in Slurm based HPC systems."
keywords = ["Pitt", "CRC", "HPC", "banking", "slurm"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]
dependencies = [
    "beautifulsoup4",
    "pandas",
    "prettytable",
    "python-environ",
    "SQLAlchemy",
    "sqlalchemy-utils",
    "time-machine",
]

[project.optional-dependencies]
tests = ["coverage"]
docs = [
    "sphinx==5.3.0",
    "sphinx_autodoc_typehints==1.20.1",
    "sphinx-copybutton==0.5.1",
    "sphinx-rtd-theme==1.1.1",
    "sphinx-argparse==0.4.0",
]

[tool.setuptools]
packages = ["bank"]

[tool.setuptools.dynamic]
version = { attr = "bank.__version__" }