[build-system]
requires = ["poetry-core", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crc-bank"
version = "0.0.0" # Version is set dynamically by the CI tool on publication
authors = ["Pitt Center for Research Computing", ]
readme = "README.md"
description = "Banking application for resource allocation in Slurm based HPC systems."
homepage = "https://github.com/pitt-crc/bank"
repository = "https://github.com/pitt-crc/bank"
documentation = "https://crc-pages.pitt.edu/bank/"
keywords = ["Pitt", "CRC", "HPC", "banking", "slurm"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
beautifulsoup4 = "4.11.2"
pandas = "1.5.3"
prettytable = "3.6.0"
python = ">3.8, <4.0"
python-environ = "0.4.54"
SQLAlchemy = "1.4.46"
sqlalchemy-utils = "0.39.0"
time-machine = "2.9.0"

[tool.poetry.group.test.dependencies]
coverage = "7.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
sphinx-argparse = "0.4.0"
sphinx_autodoc_typehints = "1.20.1"
sphinx-copybutton = "0.5.1"
sphinx-rtd-theme = "1.1.1"
